[gd_scene load_steps=13 format=3 uid="uid://28bkw6jmig2s"]

[ext_resource type="Script" uid="uid://d0thhldgh613g" path="res://Scripts/hazards/cloud.gd" id="1_0edt0"]
[ext_resource type="Texture2D" uid="uid://cl3l8bd3eb4g0" path="res://Sprites/Levels/Hazards/Cloud (calm).PNG" id="2_8715b"]
[ext_resource type="Texture2D" uid="uid://3klnaia1ubhd" path="res://Sprites/Levels/Hazards/Cloud (Storm).PNG" id="3_sdgrq"]
[ext_resource type="Texture2D" uid="uid://vanu4e2vay4a" path="res://Sprites/Levels/Hazards/Lightning 1.PNG" id="4_0ob4d"]
[ext_resource type="Texture2D" uid="uid://coefrcta5q4rw" path="res://Sprites/Levels/Hazards/Cloud Spot.PNG" id="4_8xlc7"]
[ext_resource type="Texture2D" uid="uid://ky74a2fcfb4x" path="res://Sprites/Levels/Hazards/Lightning 2.PNG" id="5_p0ba3"]
[ext_resource type="Texture2D" uid="uid://b4cbgbj7we4ro" path="res://Sprites/Levels/Hazards/Lightning 3.PNG" id="6_5gj13"]
[ext_resource type="Texture2D" uid="uid://w7o3k3wai323" path="res://Sprites/Levels/Hazards/Lightning 4.PNG" id="7_sbiro"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0edt0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8715b")
}],
"loop": true,
"name": &"Cloud",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_sdgrq")
}, {
"duration": 1.0,
"texture": ExtResource("4_0ob4d")
}, {
"duration": 1.0,
"texture": ExtResource("5_p0ba3")
}, {
"duration": 1.0,
"texture": ExtResource("6_5gj13")
}, {
"duration": 1.0,
"texture": ExtResource("7_sbiro")
}, {
"duration": 1.0,
"texture": ExtResource("6_5gj13")
}, {
"duration": 1.0,
"texture": ExtResource("5_p0ba3")
}, {
"duration": 1.0,
"texture": ExtResource("4_0ob4d")
}],
"loop": true,
"name": &"StormCloud",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_g44fc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8xlc7")
}],
"loop": true,
"name": &"Spot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ob4d"]
size = Vector2(12, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_0ob4d"]
radius = 8.0

[node name="Cloud" type="CharacterBody2D" node_paths=PackedStringArray("anim", "storm_area", "check_left", "check_right", "check_up", "check_down")]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_0edt0")
anim = NodePath("AnimatedSprite2D")
storm_area = NodePath("StormArea")
check_left = NodePath("CheckLeft")
check_right = NodePath("CheckRight")
check_up = NodePath("CheckUp")
check_down = NodePath("CheckDown")
metadata/_custom_type_script = "uid://b2dvc5a5mmaev"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0edt0")
animation = &"Cloud"
autoplay = "Cloud"
frame_progress = 0.900903
offset = Vector2(0, -8)

[node name="Spot" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_g44fc")
animation = &"Spot"
offset = Vector2(0, -8)

[node name="CheckLeft" type="Area2D" parent="."]
position = Vector2(-16, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckLeft"]
shape = SubResource("RectangleShape2D_0ob4d")

[node name="CheckRight" type="Area2D" parent="."]
position = Vector2(16, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckRight"]
shape = SubResource("RectangleShape2D_0ob4d")

[node name="CheckUp" type="Area2D" parent="."]
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckUp"]
shape = SubResource("RectangleShape2D_0ob4d")

[node name="CheckDown" type="Area2D" parent="."]
position = Vector2(0, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckDown"]
shape = SubResource("RectangleShape2D_0ob4d")

[node name="StormArea" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StormArea"]
shape = SubResource("CircleShape2D_0ob4d")

[node name="StormDelay" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="StormArea" to="." method="_on_storm_area_body_entered"]
[connection signal="timeout" from="StormDelay" to="." method="_on_storm_delay_timeout"]
